@@ -1,30 +1,38 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+// needed for task -> doLast -> exec
+interface InjectedExecOps {
+    @Inject
+    ExecOperations getExecOps()
+}
+
 buildscript {
 	ext {
 		generatedSourcesRelativePath = "generated/src"
 	}
     dependencies {
-        classpath group: 'org.yaml', name: 'snakeyaml', version: '1.19'
+        classpath("org.yaml:snakeyaml:1.19")
     }
 }
 
 plugins {
-	id("org.springframework.boot") version "2.7.18"
-	id('io.spring.dependency-management') version '1.1.4'
-	id('java')
-	id('eclipse')
+	id("org.springframework.boot") version "${springBootVersion}"
+	id("java")
+	id("eclipse")
+	id("com.diffplug.eclipse.apt") version "4.4.1" // mapStruct - only for Eclipse
 	id("de.undercouch.download") version "5.5.0"
-	id("uk.co.boothen.gradle.wsimport") version "0.21"
 	id("io.freefair.lombok") version "8.4"
+	id "org.openapi.generator" version "7.5.0"
 }
 
 //Buildship doesn't use that hooks (https://discuss.gradle.org/t/when-does-buildship-eclipse-customization-run/20781/2)
 //you need to run `gradle eclipseJdt` separately
 eclipse.jdt.file.withProperties { props ->
-	props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
-	props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
+	props["org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures"]= "enabled"
+	props["org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures"]= "ignore"
 }
 
-eclipse { // id 'eclipse'
+eclipse { // id "eclipse"
 	synchronizationTasks eclipseJdt
 }
 
@@ -34,12 +42,14 @@ lombok { // id "io.freefair.lombok"
 
 def applicationConfig = new org.yaml.snakeyaml.Yaml().loadAll(new File("$projectDir/src/main/resources/application.yml").newInputStream()).first()
 
-group = 'com.zematix.jworldcup'
+group = "com.zematix.jworldcup"
 version = applicationConfig.app.version.number
-sourceCompatibility = '21'
+java {
+	sourceCompatibility = "25"
+}
 
 bootRun {
-	String activeProfile = System.properties['spring.profiles.active']
+	String activeProfile = System.properties["spring.profiles.active"]
 	systemProperty "spring.profiles.active", activeProfile
 }
 
@@ -51,7 +61,7 @@ configurations {
 	compile {
 		extendsFrom annotationProcessor
 	}
-	all*.exclude group: 'xml-apis' // xml-apis is already included from jdk9 and it must be excluded from dependencies 
+	all*.exclude group: "xml-apis" // xml-apis is already included from jdk9 and it must be excluded from dependencies 
 }
 
 repositories {
@@ -59,55 +69,60 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-quartz'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
+	// Use the constant provided by the Spring Boot plugin to import the BOM
+    implementation platform(SpringBootPlugin.BOM_COORDINATES)
+    
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-data-rest"
+	implementation "org.springframework.boot:spring-boot-starter-freemarker"
+	implementation "org.springframework.boot:spring-boot-starter-mail"
+	implementation "org.springframework.boot:spring-boot-starter-quartz"
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	implementation "org.springframework.boot:spring-boot-starter-cache"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springframework.boot:spring-boot-starter-websocket"
+	implementation "org.springframework.boot:spring-boot-starter-amqp"
+	implementation "org.springframework.boot:spring-boot-starter-reactor-netty"
 
-	//implementation 'org.springframework.amqp:spring-rabbit'
-	//implementation 'org.springframework.amqp:spring-rabbit-admin'
-
-	implementation 'io.jsonwebtoken:jjwt:0.9.1' // JSON Web Token Support For The JVM
+	implementation "io.jsonwebtoken:jjwt-api:${jsonWebtokenVersion}" // JSON Web Token Support For The JVM
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jsonWebtokenVersion}"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jsonWebtokenVersion}" 
 	
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.hsqldb:hsqldb'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
+	runtimeOnly "org.hsqldb:hsqldb"
+	runtimeOnly "com.mysql:mysql-connector-j"
 	
-	// JUnit4 used instead of the native JUnit5
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.jupiter'
-	}
-	testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.junit.vintage:junit-vintage-engine") // JUnit4 support
+	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+		
+	testImplementation "org.springframework.amqp:spring-rabbit-test"
+	testImplementation "org.springframework.security:spring-security-test"
 	
-	testImplementation 'org.springframework.amqp:spring-rabbit-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.junit.platform:junit-platform-engine:1.7.0'
-	testImplementation 'org.junit.platform:junit-platform-commons:1.7.0'
-	
-	implementation 'com.github.ben-manes.caffeine:caffeine:3.0.2'
+	implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
 	
 	implementation "com.google.guava:guava:${guavaVersion}"
 	
-	implementation "org.springdoc:springdoc-openapi-ui:${openapiVersion}"
-	 
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openapiVersion}"
+	// dependencies of openapi-generator
+	implementation "com.google.code.gson:gson:2.11.0"
+	implementation "org.openapitools:jackson-databind-nullable:0.2.1"
+	implementation "com.squareup.okhttp3:okhttp:4.10.0"
+	implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+	implementation "io.gsonfire:gson-fire:1.9.0"
+		 
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	
 	implementation "com.querydsl:querydsl-core:${queryDslVersion}"
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+	
 	annotationProcessor(
-		"com.querydsl:querydsl-apt:${queryDslVersion}:jpa",
-		"javax.persistence:javax.persistence-api",
-		"javax.annotation:javax.annotation-api"
+		"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta",
+		"jakarta.persistence:jakarta.persistence-api:3.2.0",
+		"jakarta.annotation:jakarta.annotation-api:3.0.0"
 	)
 	
 	// Freemark dependencies
@@ -115,15 +130,16 @@ dependencies {
 	implementation "fr.opensagres.xdocreport:fr.opensagres.xdocreport.template.freemarker:${xdocreportVersion}"
 	implementation "fr.opensagres.xdocreport:fr.opensagres.xdocreport.converter.odt.odfdom:${xdocreportVersion}"
 	
-	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-properties:2.10.1"
+	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-properties:${jacksonVersion}"
+	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jacksonVersion}"
 	
 	// SOAP client
-	implementation "com.sun.xml.ws:jaxws-rt:2.3.1"
+	implementation "com.sun.xml.ws:jaxws-rt:${jaxwsVersion}"
 	
 	// JAX-RS Client with Jersey
-	implementation "org.glassfish.jersey.containers:jersey-container-servlet:2.32"
-	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:2.32"
-	implementation "org.glassfish.jersey.ext:jersey-spring5:2.32"
+	implementation "org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}"
+	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
+	implementation "org.glassfish.jersey.ext:jersey-spring6:${jerseyVersion}"
 
 	// Quartz addon for jobs which is not included in "org.springframework.boot:spring-boot-starter-quartz"
 	implementation "org.quartz-scheduler:quartz-jobs"
@@ -132,11 +148,11 @@ dependencies {
 	// class.static_method() input using PowerMockito.spy. It does work only on mocked object. We need 
 	// this feature for partial mock on static methods. Although later Mockito versions since 3.4.0 
 	// support MockedStatic, but it is cannot be used for our purpose. 
-	testImplementation "org.mockito:mockito-core:2.26.0"
+	testImplementation "org.mockito:mockito-core:${mockitoVersion}"
 	
 	// mostly for static support: partial mock on static methods and Whitebox support
-	testImplementation "org.powermock:powermock-api-mockito2:2.0.7"
-	testImplementation "org.powermock:powermock-module-junit4:2.0.7"
+	testImplementation "org.powermock:powermock-api-mockito2:${powermockVersion}"
+	testImplementation "org.powermock:powermock-module-junit4:${powermockVersion}"
 }
 
 test {
@@ -149,56 +165,61 @@ test {
 	}*/
 }
 
-task downloadFile(type: Download, description: "Download OpenLigaDB WSDL file") {
+task downloadApi(type: Download, description: "Download Swagger OpenLigaDB JSON file") {
 	dependsOn processResources 
-	src "https://www.openligadb.de/Webservices/Sportsdata.asmx?wsdl"
-	dest "src/main/resources/wsdl/Sportsdata.wsdl"
-	//onlyIfModified true
-	overwrite false
+	src "https://api.openligadb.de/swagger/v1/swagger.json"
+	dest "src/main/resources/swagger/matchdataApi.json"
+	onlyIfModified true
 }
 
-wsimport {  
-	wsdlSourceRoot = "src/main/resources/wsdl"
-	generatedSourceRoot = "${generatedSourcesRelativePath}/wsdl/main/java"
-	target = "2.0"
-	keep = true
-	extension = true
-
-	wsdl ("Sportsdata.wsdl") {
-		packageName("com.msiggi.openligadb.client")
-		wsdlLocation("../../../../wsdl/Sportsdata.wsdl")
-	}
+task generateApi(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
+    generatorName = "java"
+    generateApiTests = false
+    generateModelTests = false
+    inputSpec = "$projectDir/src/main/resources/swagger/matchdataApi.json".toString()
+    outputDir = "$buildDir/${generatedSourcesRelativePath}/swagger/main/java"
+    apiPackage = "com.msiggi.openligadb.api"
+    modelPackage = "com.msiggi.openligadb.model"
+    configOptions = [
+            dateLibrary: "java8-localdatetime",
+            useTags: "true",
+            interfaceOnly: "true", // Generating the Controller API interface and the models only
+            sourceFolder: "",
+            useSpringBoot3: "true",
+            useJakartaEe: "true"
+    ]
 }
 
 task generateTestDatabaseScripts {
 	String generatedResourceRoot = "$buildDir/${generatedSourcesRelativePath}/test/resources/database"
 	String awkSourceDir = "${projectDir}/src/test/resources/database"
+	def injected = project.objects.newInstance(InjectedExecOps)
 
 	doLast() {
 		mkdir generatedResourceRoot
 
-		exec {
+		injected.execOps.exec {
 			workingDir awkSourceDir
-			commandLine 'awk', '-f', 'drop_db.awk', 'worldcup_test.sql'
-			standardOutput new FileOutputStream("${generatedResourceRoot}/worldcup_test_drop.sql")
+			commandLine "awk", "-f", "drop_db.awk", "worldcup_test.sql"
+			standardOutput = new FileOutputStream("${generatedResourceRoot}/worldcup_test_drop.sql")
 		}
 
-		exec {
+		injected.execOps.exec {
 			workingDir awkSourceDir
-			commandLine 'awk', '-f', 'create_db.awk', 'worldcup_test.sql'
-			standardOutput new FileOutputStream("${generatedResourceRoot}/worldcup_test_create.sql")
+			commandLine "awk", "-f", "create_db.awk", "worldcup_test.sql"
+			standardOutput = new FileOutputStream("${generatedResourceRoot}/worldcup_test_create.sql")
 		}
 		
-		exec {
+		injected.execOps.exec {
 			workingDir awkSourceDir
-			commandLine 'awk', '-f', 'insert_db.awk', 'worldcup_test.sql'
-			standardOutput new FileOutputStream("${generatedResourceRoot}/worldcup_test_insert.sql")
+			commandLine "awk", "-f", "insert_db.awk", "worldcup_test.sql"
+			standardOutput = new FileOutputStream("${generatedResourceRoot}/worldcup_test_insert.sql")
 		}
 		
-		exec {
+		injected.execOps.exec {
 			workingDir awkSourceDir
-			commandLine 'awk', '-f', 'insert_hsqldb.awk', 'worldcup_test.sql'
-			standardOutput new FileOutputStream("${generatedResourceRoot}/worldcup_test_insert_hsqldb.sql")
+			commandLine "awk", "-f", "insert_hsqldb.awk", "worldcup_test.sql"
+			standardOutput = new FileOutputStream("${generatedResourceRoot}/worldcup_test_insert_hsqldb.sql")
 		}
 	}
 }
@@ -211,12 +232,12 @@ task copyBuildInfo(type: Copy) {
 }
 
 compileJava {
-	String annotationProcessorPath = "$buildDir/$generatedSourcesRelativePath/annotationProcessor/main/java"  
-	String wsdlPath = wsimport.generatedSourceRoot
+	String annotationProcessorPath = "$buildDir/${generatedSourcesRelativePath}/annotationProcessor/main/java"  
+	String swaggerPath = "$buildDir/${generatedSourcesRelativePath}/swagger/main/java"
 	String testResourcePath = "$buildDir/${generatedSourcesRelativePath}/test/resources"
 
 	sourceSets.main.java { 
-		srcDirs += [annotationProcessorPath, wsdlPath]
+		srcDirs += [annotationProcessorPath, swaggerPath]
 	}
 
 	sourceSets.test.resources { 
@@ -226,28 +247,30 @@ compileJava {
 	File annotationProcessorPathFile = project.file(annotationProcessorPath)
 	println "Creating and configuring generated annotationProcessor source directory $annotationProcessorPathFile"
 	project.mkdir(annotationProcessorPathFile)
-	options.annotationProcessorGeneratedSourcesDirectory = annotationProcessorPathFile
+	options.generatedSourceOutputDirectory = annotationProcessorPathFile
 	outputs.dir(annotationProcessorPathFile)
 }
 
 tasks.withType(JavaCompile) {
-	dependsOn downloadFile, generateTestDatabaseScripts//, copyBuildInfo //, wsimport //, generateJaxb
+	dependsOn generateTestDatabaseScripts, generateApi//, copyBuildInfo
+	options.encoding = "UTF-8"
 	options.compilerArgs += [
-		//"--enable-preview",
 		"-Amapstruct.defaultComponentModel=spring",
-		"-Amapstruct.unmappedTargetPolicy=IGNORE"
+		"-Amapstruct.unmappedTargetPolicy=IGNORE",
+//		"-Amapstruct.verbose=true",
+		"-Xlint:deprecation",
+		"-parameters",
+//		"-verbose"
 	]
 }
 
 tasks.withType(Test) {
 	jvmArgs += [
-		//"--enable-preview"
 	]
 }
 
 tasks.withType(JavaExec) {
 	jvmArgs += [
-		//"--enable-preview"
 	]
 }
 
@@ -255,7 +278,11 @@ clean {
 	delete "bin/main/META-INF"
 }
 
+bootJar {
+	setDuplicatesStrategy(DuplicatesStrategy.WARN)
+}
+
 springBoot {
-	//mainClassName = 'com.zematix.jworldcup.backend.Application'
+	//mainClassName = "com.zematix.jworldcup.backend.Application"
 	buildInfo()
 }
